# TranslateMyPDF-Showcase

./: .env.example  .gitattributes  .gitignore  README.md  api_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: README.md  classifier.py  document_map.py  extractor.py  font_manager.py  models.py  ocr_extractor.py  redactor.py  table_detector.py  toc.py  translator.py  validation.py
database/: db.py
docs/: architecture.md  data-model.md  pipeline.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt
frontend/src/: App.css  App.jsx  index.css
frontend/src/contexts/: LanguageContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useMagnetic.js  useSound.js  useTranslation.js
frontend/src/i18n/: translations.js
frontend/src/pages/: About.css  About.jsx  FAQ.css  FAQ.jsx
frontend/src/reference-screenshots/: README.md
frontend/src/services/: api.js  api.mock.js
frontend/src/styles/: Common.css  animations.js  (+1 more)
pipeline/: README.md  document.py
tests/: conftest.py  test_api_preview.py  test_db_chunking.py  test_detect_alignment.py  test_document_processor_quality.py  test_redactor.py
tests/integration/: test_pipeline.py
tests/unit/: test_classifier.py  test_coordinate_map.py  test_document_map.py  test_extractor.py  test_font_manager.py  test_ocr_extractor.py  test_redactor.py  test_table_detector.py  test_text.py  test_toc_strategy.py  test_translator.py  test_validation.py
tools/: README.md  coordinate_map.py
utils/: README.md  logger.py  text.py
(+48 files in other folders)
